[metadata]
name = "vase-djinn"
version = "0.0.0"
description = "Vase Generator"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["vase", "stl", "flask"]
authors = [
  {name = "Jules Pare", email = "jules.g.pare@gmail.com"},
]
maintainers = [
  {name = "Jules Pare", email = "jules.g.pare@gmail.com"},
]

[options]
packages = find:
install_requires=[
        'flask',
    ],
